fix(radio): fix wrong font-size for m-thumbnail

--- a/packages/components/radio/src/less/_variables.less
+++ b/packages/components/radio/src/less/_variables.less
@@ -34,7 +34,7 @@
 @oui-radio-m-inner-circle-size: rem-calc(10);
 @oui-radio-m-inner-circle-top: rem-calc(9);
 @oui-radio-m-inner-circle-left: rem-calc(5);
-@oui-radio-m-inner-font-size: rem-calc(19);
+@oui-radio-m-inner-font-size: rem-calc(24);
 
 @oui-radio-description-font-size: rem-calc(14);
 
